--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -3,10 +3,11 @@
   <head>
     <meta charset="UTF-8">
   </head>
-  <body style="margin:0;padding:0;">
-    <header style="color:Red;height:70px;width:100%;">
+  <body style="margin:0; padding:0;">
+    <header style="background: #FF0000; height: 70px; width: 100%;">
     </header>
-    <footer style="color:Lime;height:60px;width:100%;">
+    <footer style="background: #00FF00; height: 60px; width:100%;">
+      Holberton School
     </footer>
   </boddy>
 </html>
