--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,12 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-  </head>
-  <body style="margin:0; padding:0;">
-    <header style="background: #FF0000; height: 70px; width: 100%;">
-    </header>
-    <footer style="background: #00FF00; height: 60px; width:100%;">
-      Holberton School
-    </footer>
-  </boddy>
-</html>
+    <title>
+      </title>
+    </head>
+  <body style="padding: 0; margin: 0;">
+    <header style="background: #FF0000; height: 70px; width: 100%">
+      </header>
+    <footer style="background: #00FF00; height: 60px; width: 100%; position: absolute; bottom: 0; line-height: 60px; text-align: center">
+                      Holberton School
+		                  </footer>
+     </body>
+  </html>
