--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -2,8 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>
-      </title>
+    <title>AirBnBClone</title>
     </head>
   <body style="padding: 0; margin: 0;">
     <header style="background: #FF0000; height: 70px; width: 100%">
