--- a/web_static/2-index.html
+++ b/web_static/2-index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <title>AirBnBClone</title>
+    <link rel="stylesheet" href="styles/2-common.css">
+    <link rel="stylesheet" href="styles/2-header.css">
+    <link rel="stylesheet" href="styles/2-footer.css">
     </head>
   <body>
     <header>
